--- a/ckanext/organization_group/templates/add_owner.html
+++ b/ckanext/organization_group/templates/add_owner.html
@@ -38,7 +38,11 @@
                 options=group_list, selected='0', classes=[], attrs={'class': 'group_dropdown'}, is_required=false) 
     }} 
     <br>
-    <div class="form-actions">        
+    <div class="form-actions">
+        {% if h.cancel_dataset_is_enabled() %} 
+          {% set dest_url = h.url_for('cancel_dataset_creation.cancel_dataset', package_id=pkg_dict.id, is_draft=0, _external=True) %}
+          <a class="btn btn-danger pull-left" href="{{dest_url}}" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to delete this dataset?') }}">{{ _('Cancel & Delete Dataset') }}</a>        
+        {% endif %}
         <button class="btn btn-primary"  id="next-btn" name="save_btn" value="finish_ownership" type="submit">{{ _('Next') }}</button>
     </div> 
 
