added loading animation for next step button

--- a/ckanext/organization_group/public/statics/ownership.css
+++ b/ckanext/organization_group/public/statics/ownership.css
@@ -67,3 +67,8 @@
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+.fa.fa-spinner.fa-spin{
+  font-size: 14px;
+  display: none;
+}
