--- a/ckanext/organization_group/templates/add_owner.html
+++ b/ckanext/organization_group/templates/add_owner.html
@@ -51,7 +51,7 @@
           {% set dest_url = h.url_for('cancel_dataset_creation.cancel_dataset', package_id=pkg_dict.id, is_draft=0, _external=True) %}
           <a class="btn btn-danger pull-left" href="{{dest_url}}" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to delete this dataset?') }}">{{ _('Cancel & Delete Dataset') }}</a>        
         {% endif %}
-        <button class="btn btn-primary"  id="next-btn" name="save_btn" value="finish_ownership" type="submit">{{ _('Next') }}</button>
+        <button class="btn btn-primary"  id="next-btn" name="save_btn" value="finish_ownership" type="submit"><i class="fa fa-spinner fa-spin" id="next-step-loadin-animation"></i>{{ _('Next') }}</button>
     </div> 
 
   </form>
